# PP

./: .env.development  .env.example  .env.production  .gitignore  .impeccable.md  .rufloignore  BACKEND_README.md  CLAUDE.md  CLIENT_MOBILE_GUIDE.md  CMakeLists.txt  DEMO_GUIDE.md  GEMINI.md  Makefile  README-VERCEL.md  README.md  check-roles.mjs  deploy.ps1  drizzle.config.ts  ecosystem.config.cjs  eslint.config.js  final_sync_check.txt  next.config.mjs  opencode.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  proto5. `1.0.tar.gz`  server.js  tailwind.config.ts  test1_final_check.txt  test1_sidebar_final_snapshot.txt  test1_sidebar_retest_snapshot.txt  test1_sidebar_snapshot.txt  test2_parichay_snapshot.txt  tsconfig.tsbuildinfo  vercel.json  wrangler.toml
.claude/: launch.json  settings.local.json
.opencode/: package-lock.json
android-app/: settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
cloudflare-deploy/server/: app-paths-manifest.json  middleware-build-manifest.js  middleware-manifest.json  server-reference-manifest.js  server-reference-manifest.json
docs/: access-workflow-phase2-status-expansion.md  client-hierarchy-workflow-audit.md
docs/deployment/: hostinger-vps.md
docs/implementation/: GAPFIX-PLAN.md
docs/plans/: 2026-03-08-demo-role-collapse-design.md  2026-03-08-demo-visual-system-design.md  2026-03-08-demo-visual-system.md  2026-03-08-homepage-redesign-design.md  2026-03-08-homepage-redesign.md  2026-03-09-aalekh-publication-pipeline-design.md  2026-03-09-aalekh-publication-pipeline.md  2026-03-09-demo-role-collapse.md  2026-03-09-prachar-campaign-control-room-design.md  2026-03-09-prachar-campaign-control-room.md  2026-03-12-calendar-institutional-planning-panchang-design.md  2026-03-12-calendar-institutional-planning-panchang.md  2026-03-16-access-workflow-phase2-status-expansion.md  2026-04-03-foundation-phase-impl.md  2026-04-03-phase2-core-modules.md  2026-04-03-phase3-frontend-integration.md  2026-04-03-pragya-pravah-erp-production-redesign.md  2026-04-13-login-editorial-refresh-design.md  2026-04-13-login-editorial-refresh.md
e2e/: demo-deep-test.mjs  demo-smoke.spec.ts  demo-visual-test.mjs  end-user-simulation.spec.ts  end-user-test.mjs  mobile-audit.mjs  mobile-workbench.spec.ts  smoke.spec.mjs  ui-ux-audit.mjs  visual-test.mjs
e2e/audit/: audit-report.txt
public/: _routes.json  manifest.json  offline.html  sw-unregister.js  sw.js
scripts/: add-column.mjs  add-responsibility-columns.mjs  apply-form-migration.mjs  audit-workflow.mjs  check-audit-schema.mjs  check-responsibility.mjs  check-schema.mjs  check-system.mjs  clean-next-types.mjs  cleanup-db.mjs  create-master.mjs  db-repair-hindi-mojibake.example.sql  docker-dev.sh  docker-down.ps1  docker-down.sh  docker-up.ps1  docker-up.sh  fix-onboarding-password.mjs  migrate-neon.mjs  neon-consolidated-migration.sql  neon-performance-indexes.sql  promote-admin.mjs  seed-db.mjs  show-all-ids.mjs  test-api.mjs  test-dheerendra.mjs  test-full-flow.mjs  test-login-api.mjs  test-master.mjs  test-neon.mjs  vercel-build-filter.sh  verify-cleanup.mjs  verify-live-first-half.ps1  verify-phase1-rls.mjs
src/: App.tsx  grpc_server.cpp  index.css  middleware.ts  proxy.ts
src/__tests__/: pr1-workflow-validation.test.ts
src/app/: globals.css  layout.tsx  manifest.ts  not-found.tsx  page.tsx  textures.css
src/components/: AppLayout.tsx  AppLayoutShell.tsx  AppSidebar.tsx  ClientProviders.tsx  DashboardCard.tsx  ErrorBoundary.tsx  Masthead.tsx  MobileBottomNav.test.tsx  MobileBottomNav.tsx  Navbar.test.tsx  Navbar.tsx  PageTransition.tsx  PragyaLogo.tsx  ScrollToTop.tsx  Skeletons.tsx  ToastProvider.tsx  WorkflowPageLoading.test.tsx  WorkflowPageLoading.tsx  WorkflowRoutePrefetcher.tsx
src/context/: AppContext.tsx  BonsaiContext.tsx
src/db/: apply-migration.ts  client.ts  seed-campus-workflows.ts  seed-campus.ts  seed-demo-users.ts  seed-demo.ts  seed-library.ts  seed-outreach.ts  seed-publications.ts  seed-research.ts  seed-scholars.ts  seed-vimarsh-charcha.ts  seed-vishaya.ts  seed.ts
src/hooks/: use-bonsai-llm.ts  use-sign-out.ts  usePublicEvent.ts
src/lib/: audit.ts  contributions.server.ts  contributions.ts  public-events.test.ts  public-events.ts  query-client.test.ts  query-client.ts  response.ts  useT.ts
src/pages/: AapKaItihas.tsx  ContentFeed.tsx  Dashboard.tsx  Directory.tsx  ELibrary.tsx  Parichay.tsx
src/types/: database.ts
supabase/: config.toml  seed.sql
supabase/migrations/: 20260226131926_core_foundation_schema.sql  20260226131927_rls_and_security.sql  20260226131928_storage_buckets_and_policies.sql  20260227000000_bhopal_v1_rollout.sql  (+6 more)
tests/: mobile-ui-regression.spec.ts
(+930 files in other folders)
